PROJECT( osgQtWidget )
SET(TargetName osgQtWidget)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MACRO(USE_QT TARGET_TARGETNAME)
  SET(LIBS ${ARGN})
  FIND_PACKAGE(Qt4 REQUIRED ${LIBS})
  SET(QT_USE_QTOPENGL TRUE)
  ADD_DEFINITIONS(${QT_DEFINITIONS})
  INCLUDE(${QT_USE_FILE})
  set(CMAKE_AUTOMOC ON)
  set(CMAKE_INCLUDE_CURRENT_DIR ON)
  set(CMAKE_AUTOUIC ON)
  SET(CMAKE_INCLUDE_CURRENT_DIR ON)
  TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}  ${QT_LIBRARIES})
ENDMACRO(USE_QT)

MACRO(USE_OSG TARGET_TARGETNAME)
  SET(LIBS ${ARGN})
  FIND_PACKAGE(OpenSceneGraph   REQUIRED  ${LIBS})
  INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME} ${OPENSCENEGRAPH_LIBRARIES})
ENDMACRO(USE_OSG)

SET(TARGET_SRC
  main.cpp
  osgqtwidgets.cpp
  )

SET(TARGET_H
  osgqtwidgets.h
  )

add_executable(${TargetName} ${TARGET_SRC} ${TARGET_H})
USE_QT(${TargetName} QtCore QtGui QtOpenGl)
IF("$ENV{OSG_DIR}" STREQUAL "") 
  SET(ENV{OSG_DIR} "c:/OpenSceneGraph-3.0.1")
ENDIF()
USE_OSG(${TargetName} OpenThreads osg osgDB osgUtil osgGA osgViewer  osgQt)

IF(WIN32)
  SET_TARGET_PROPERTIES(${TargetName} PROPERTIES
    LINK_FLAGS_DEBUG "/ENTRY:\"mainCRTStartup\"  /SUBSYSTEM:WINDOWS"
    )
ENDIF(WIN32)

